--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ language: java
 script:
 - mvn install -DskipTests=true -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V
 - ls -l --si target
-- tools/upload.sh target/*.zip target/*.md5 target/*.sha*
+- common/scripts/upload.sh target/*.zip target/*.md5 target/*.sha*
+
 branches:
   except:
     - # Do not build tags that we create when we upload to GitHub Releases
