--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,10 @@
                 <directory>src/main/xdocs</directory>
             </resource>
             <resource>
-                <directory>src/main/schemas</directory>
+                <directory>common/schemas</directory>
+                <includes>
+                    <include>irp-protocols.xsd</include>
+                </includes>
             </resource>
         </resources>
         <plugins>
@@ -85,7 +88,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <basedir>src/main/schemas</basedir>
+                    <basedir>common/schemas</basedir>
                     <catalogHandling>strict</catalogHandling>
                     <catalogs>
                         <catalog>catalog.xml</catalog>
