--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
-sudo: required
+dist: trusty
 notifications:
 email: false
 language: java
-#jdk:
-#- oraclejdk8
+jdk: oraclejdk8
 #before_install:
 #- sudo add-apt-repository ppa:dns/gnu -y
 #- sudo apt-get update -qq
-script:
-- mvn install -DskipTests=true -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V
-- ls -l --si target
-- common/scripts/upload.sh target/*.zip target/*.md5 target/*.sha*
+#script:
+#- mvn install -DskipTests=true -Dmaven.test.skip=true -Dmaven.javadoc.skip=true -B -V
+#- ls -l --si target
+
+after_success: ./common/scripts/upload.sh target/*.zip target/*.md5 target/*.sha*
 
 branches:
   except:
