--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.harctoolbox</groupId>
     <artifactId>IrpTransmogrifier</artifactId>
     <packaging>jar</packaging>
-    <version>1.2.12-SNAPSHOT</version>
+    <version>1.2.12</version>
     <name>${project.artifactId}</name>
     <licenses>
         <license>
