Minor tweaks to the Makefile.
only of interest for the maintainer.

--- a/src/test/teaserfiles/Makefile
+++ b/src/test/teaserfiles/Makefile
@@ -208,7 +208,7 @@ endif
 	$(ICTPARSE) "$<" > "$@"
 
 %.diffuse: %.out | %.exp
-	kdiff3 $< $*.exp
+	diffuse $< $*.exp
 
 nukeempty:
 	find . -name \*.diff -size 0 -exec rm \{\} \;
