Possibility to read inputs in girr format for analyze and decode.
Resolves #253.

--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,7 @@
                         <include>IrpProtocols2html.xsl</include>
                         <include>${project.artifactId}.xml</include>
                         <include>irp-protocols.xsd</include>
+                        <include>rawgirr2named.xsl</include>
                     </includes>
                 </configuration>
             </plugin>
