--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,7 @@ name: Java CI with Maven + Upload
 
 on:
   push:
-    branches: [ master ]
+    branches: [ SchemaFactory_broken ]
 #  pull_request:
 #    branches: [ master ]
 
@@ -15,7 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+      with:
+        ref: SchemaFactory_broken
     - name: Set up JDK 8
       uses: actions/setup-java@v2
       with:
