--- a/pom.xml
+++ b/pom.xml
@@ -183,7 +183,7 @@
                     <dependency>
                         <groupId>xalan</groupId>
                         <artifactId>xalan</artifactId>
-                        <version>2.7.2</version>
+                        <version>2.7.2</version> <!-- 2.7.3 not working -->
                     </dependency>
                 </dependencies>
             </plugin>
@@ -193,7 +193,7 @@
             <plugin>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4-maven-plugin</artifactId>
-                <version>4.9.3</version> <!-- Newer versions seem not compatible -->
+                <version>4.13.2</version>
                 <executions>
                     <execution>
                         <id>antlr</id>
@@ -215,7 +215,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.7.1</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -291,7 +291,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-remote-resources-plugin</artifactId>
-                <version>3.1.0</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -313,7 +313,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.5.0</version>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <phase>generate-sources</phase>
@@ -331,7 +331,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.13.0</version>
                 <configuration>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
@@ -339,7 +339,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.2.2</version>
+                <version>3.5.2</version>
                 <configuration>
                     <skipTests>false</skipTests>
                     <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
@@ -374,7 +374,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.6.2</version>
+                        <version>3.11.2</version>
                         <configuration>
                             <outputDirectory>${project.build.directory}/apidocs</outputDirectory>
                             <show>package</show> <!-- Document also package private classes -->
@@ -392,7 +392,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>3.3.0</version>
+                        <version>3.3.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -405,7 +405,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.1.0</version>
+                        <version>3.2.7</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -419,7 +419,7 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.13</version>
+                        <version>1.7.0</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>ossrh</serverId>
@@ -443,7 +443,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>3.1.1</version>
+                        <version>3.5.0</version>
                         <executions>
                             <execution>
                                 <id>make-wrapper-executable</id>
@@ -477,7 +477,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
-                        <version>3.1.1</version>
+                        <version>3.5.0</version>
                         <executions>
                             <!-- compute checksums -->
                             <!-- I know the checksum-maven-plugin, but it does not do what I want) -->
@@ -506,7 +506,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4</artifactId> <!-- transitively includes ST4, antlr-runtime, antlr4-runtime -->
-            <version>4.9.3</version> <!-- 4.10.* and 4.11.* not compatible -->
+            <version>4.13.2</version> <!-- 4.10.* and 4.11.* not compatible -->
             <exclusions>
                 <exclusion>
                     <groupId>com.ibm.icu</groupId>
@@ -526,7 +526,7 @@
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>7.5.1</version> <!-- later versions not compatible -->
+            <version>7.10.2</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.beust</groupId>
