--- a/pom.xml
+++ b/pom.xml
@@ -193,7 +193,7 @@
             <plugin>
                 <groupId>org.antlr</groupId>
                 <artifactId>antlr4-maven-plugin</artifactId>
-                <version>4.13.2</version>
+                <version>4.9.3</version> <!-- Newer versions seem not compatible -->
                 <executions>
                     <execution>
                         <id>antlr</id>
@@ -506,7 +506,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>antlr4</artifactId> <!-- transitively includes ST4, antlr-runtime, antlr4-runtime -->
-            <version>4.13.2</version> <!-- 4.10.* and 4.11.* not compatible -->
+            <version>4.9.3</version> <!-- 4.10.* and 4.11.* not compatible -->
             <exclusions>
                 <exclusion>
                     <groupId>com.ibm.icu</groupId>
